# image-converter-offline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OmniImage.spec  README.md  pyproject.toml
.github/workflows/: tests.yml
converted/: omniimage_report.csv  screenshot_1.avif
docs/: ARCHITECTURE.md  RELEASE.md
packaging/: OmniImage.spec  pyinstaller_entry.py
scripts/: build_unix.sh  build_windows.ps1
src/omniimage/: __init__.py  app.py  cli.py  converter.py  file_discovery.py  format_utils.py  main.py  reports.py
src/omniimage/backends/: __init__.py  base.py  imagemagick_backend.py  pillow_backend.py  raw_backend.py
tests/: test_cli.py  test_packaging.py  test_paths_and_formats.py  test_pillow_backend.py
